--- a/EclipseProg/Scouthis/res/layout/fragment_section_alert_user_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alert_user_gps.xml
@@ -9,10 +9,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="3dip"
-        android:layout_marginRight="10dip"
+        android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/setGpsOn"
-        android:textSize="20sp" />
+        android:textSize="15sp"
+        android:textStyle="italic" />
 
     <ImageButton
         android:id="@+id/setGpsOn"
@@ -22,6 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/list_selector"
-        android:src="@drawable/actionb_gps" />
+        android:src="@drawable/actionb_gps"
+        android:padding="5dp" />
 
 </RelativeLayout>
