--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_disconnected.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_disconnected.xml
@@ -5,30 +5,27 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical" >
-		
-    	
-		<TextView 
-		    android:id="@+id/txtFFLoginMessage"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_marginTop="-40dp"
-		    android:gravity="center"
-		    android:textSize="20sp" />
-		
-		<Button
-            android:id="@+id/btnLogIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/btn_facebook_login"
-             />
-		        
-		<TextView
-		    android:id="@+id/txtFFDontWarryMessage"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_marginTop="20dp"
-		    android:gravity="center"
-		    android:textSize="15sp" />
-    
+
+    <TextView
+        android:id="@+id/txtFFLoginMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-40dp"
+        android:gravity="center"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/btnLogIn"
+        style="@style/FacebookLoginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/txtFFDontWorryMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textSize="15sp" />
+
 </LinearLayout>
