--- a/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
@@ -1,47 +1,96 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/fragment_border_side"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="5dp" >
 
-	<LinearLayout
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_marginTop="5dp"
-	    android:orientation="horizontal" >
-
-		<ImageView
-		    android:id="@+id/imgNewsMessage"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_gravity="center" />
-	    
-	    <TextView
-	        android:id="@+id/lblNewsMessage"
-	    	android:layout_marginLeft="@dimen/fragment_border_side"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:text="...Caricamento..."
-	        style="@style/FragmentTitle"
-	        />
-	
-    </LinearLayout>
-	    
-	<Button
-        android:id="@+id/btnHomeReload"
+    <RelativeLayout
+        android:id="@+id/newsfeedTopLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" >
+
+        <ImageView
+            android:id="@+id/imgNewsMessage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp" />
+
+        <TextView
+            android:id="@+id/lblNewsMessage"
+            style="@style/FragmentTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/imgNewsMessage"
+            android:lineSpacingExtra="3sp"
+            android:lineSpacingMultiplier="0.8"
+            android:paddingBottom="5dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/newsfeedErrorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/newsfeedTopLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:paddingTop="80dp"
         android:layout_gravity="center"
-        android:text="Ricarica"
-        android:visibility="gone" />
-		    
+        android:gravity="center" >
+
+        <TextView
+            android:id="@+id/txtNewsError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:lineSpacingExtra="3sp"
+            android:lineSpacingMultiplier="0.8"
+            android:paddingBottom="5dp"
+            android:text="@string/news_rss_connection_error"
+            android:textStyle="italic" />
+
+        <Button
+            android:id="@+id/btnHomeReload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtNewsError"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="@string/news_rss_reload" />
+
+        <ProgressBar
+            android:id="@+id/newsfeedProgressBar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:indeterminate="true" />
+
+        <TextView
+            android:id="@+id/txtNewsProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/newsfeedProgressBar"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:lineSpacingExtra="3sp"
+            android:lineSpacingMultiplier="0.8"
+            android:paddingBottom="5dp"
+            android:text="@string/news_rss_loading"
+            android:textSize="22sp"
+            android:textStyle="italic" />
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/lstNews"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        >
+        android:layout_below="@id/newsfeedTopLayout" >
     </ListView>
 
-</LinearLayout>
+</RelativeLayout>
