--- a/EclipseProg/Scouthis/res/layout/newsfeed_list_row.xml
+++ b/EclipseProg/Scouthis/res/layout/newsfeed_list_row.xml
@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
-     <LinearLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="vertical" >
-         
-	    <LinearLayout
-	         android:layout_width="wrap_content"
-	         android:layout_height="wrap_content"
-	         android:orientation="horizontal">
-	         
-	         <ImageView
-	             android:id="@+id/imgRow"
-	             android:layout_width="wrap_content"
-	             android:layout_height="wrap_content"
-	             android:layout_gravity="center"
-	             android:layout_marginRight="4dp"
-	             android:layout_marginTop="4dp"
-	             android:src="@android:drawable/btn_default_small" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="5dp" >
 
-            <TextView
-                android:id="@+id/lblRSSItem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp" />
-		
-		</LinearLayout>
-		
-		<TextView
-		    android:id="@+id/dscRSSItem"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginBottom="4dp" />
+        <ImageView
+            android:id="@+id/imgRow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp" />
 
-     </LinearLayout>
+        <TextView
+            android:id="@+id/lblRSSItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:lineSpacingMultiplier="0.8"
+            android:lineSpacingExtra="3sp"
+            android:paddingBottom="5dp" />
+    </LinearLayout>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/dscRSSItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="italic"
+        android:textSize="16sp"
+        android:lineSpacingMultiplier="0.8"
+        android:lineSpacingExtra="3sp"
+        android:paddingBottom="5dp" />
+
+</LinearLayout>
