--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -6,16 +6,17 @@
     <color name="button_text">#acacac</color>
     <color name="button_background">#db555555</color>
     <color name="button_background_pressed">#858585</color>
-	<color name="coral_light">#F08080</color>
-	<color name="azure">#00FFFF</color>
-	<color name="orange_ligh">#FFE4C4</color>
-	<color name="maroon">#800000</color>
-	<color name="alarm_day_colour">#3080A2</color>
-	<color name="dark_green">#006400</color>
-	<color name="color_blue1">#0094FF</color>
-	<color name="pergamena">#FFFFC2</color>
-	<color name="lightbrown">#F5DEB3</color>
-	<color name="senape">#FFE118</color>
-	<color name="tabs_background">#FFF3C4</color>
-	<color name="fragment_title">#99583C</color>
+    <color name="coral_light">#F08080</color>
+    <color name="azure">#00FFFF</color>
+    <color name="orange_ligh">#FFE4C4</color>
+    <color name="maroon">#800000</color>
+    <color name="alarm_day_colour">#3080A2</color>
+    <color name="dark_green">#006400</color>
+    <color name="color_blue1">#0094FF</color>
+    <color name="pergamena">#FFFFC2</color>
+    <color name="lightbrown">#F5DEB3</color>
+    <color name="senape">#FFE118</color>
+    <color name="tabs_background">#E2F6F7</color>
+    <color name="fragment_title">#425688</color>
+
 </resources>
