--- a/EclipseProg/Scouthis/res/values/strings_fragments.xml
+++ b/EclipseProg/Scouthis/res/values/strings_fragments.xml
@@ -2,12 +2,13 @@
 <resources>
     
     <!-- Generic strings -->
+    <string name="fragments_loading">Loading</string>
     <string name="fragments_new">Nuovo</string>
     <string name="fragments_start">Start</string>
     <string name="fragments_waiting_dots">&#8230;</string>
-    <string name="fragments_general_alert">Questa applicazione ha bisogno del Gps.\nAttivalo perché funzioni al meglio!</string>
-    <string name="fragments_step_alert">Il Contapassi ha bisogno del Gps.\nAttivalo perché funzioni al meglio!</string>
-    <string name="fragments_friends_alert">Il Trova Amici ha bisogno del Gps.\nAttivalo perché funzioni al meglio!</string>
+    <string name="fragments_general_alert">Questa applicazione ha bisogno del GPS. Clicca sul bottone a destra per attivarlo!</string>
+    <string name="fragments_step_alert">Il Contapassi ha bisogno del GPS. Clicca sul bottone a destra per attivarlo!</string>
+    <string name="fragments_friends_alert">Il Trovamici ha bisogno del GPS. Clicca sul bottone a destra per attivarlo!</string>
     
     <!-- Strings related to tabs viewer -->
     <string name="fragments_1_title">News</string>
@@ -17,7 +18,8 @@
     <string name="fragments_5_title">Alarm</string>
     
     <!-- Strings related to news fragment  -->
-    <string name="news_rss_loading">Caricamento in corso&#8230;</string>
+    <string name="news_rss_loading">&#8230;Caricamento in corso&#8230;</string>
+    <string name="news_rss_reload">Ricarica</string>   
     <string name="news_rss_information">Le ultime news sull\'Ambiente da corriere.it</string>
     <string name="news_rss_connection_error">Impossibile caricare il newsfeed.\nLa connessione dati non risulta attiva.</string>
     
@@ -51,9 +53,11 @@
     <string name="findfriends_logout_message">Benvenuto!</string>
     <string name="findfriends_dontwarry_message">Non posteremo nulla sulla tua bacheca!</string>
     <string name="findfriends_wellcome_name">Benvenuto</string>
-    <string name="findfriends_my_marker">Tu sei qui</string>
     <string name="findfriends_login_button">Facebook Login</string>
-    
+    <string name="findfriends_status_gps_deactivated">&lt;b&gt;Stato:&lt;/b&gt; GPS non attivo.</string>  
+    <string name="findfriends_status_waiting_gps">&lt;b&gt;Stato:&lt;/b&gt; In attesa del GPS&#8230;</string>        
+    <string name="findfriends_status_waiting_friends">&lt;b&gt;Stato:&lt;/b&gt; Ricezione lista degli amici&#8230;</string>
+    <string name="findfriends_status_ready">&lt;b&gt;Stato:&lt;/b&gt; Connesso.</string>        
     
     <!--   Strings related to alarm fragment -->
     
