--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="orange_ligh">#FFE4C4</color>
     <color name="maroon">#800000</color>
     <color name="alarm_day_colour">#3080A2</color>
-    <color name="dark_green">#006400</color>
+    <color name="btn_background">#4CA5FF</color>
     <color name="color_blue1">#0094FF</color>
     <color name="pergamena">#FFFFC2</color>
     <color name="lightbrown">#F5DEB3</color>
