--- a/EclipseProg/Scouthis/res/drawable/button_round_light_pressed.xml
+++ b/EclipseProg/Scouthis/res/drawable/button_round_light_pressed.xml
@@ -2,5 +2,5 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="oval">
          <solid android:color="@color/white"></solid>
-        <stroke android:width="2sp" android:color="@color/dark_green" />
+        <stroke android:width="2sp" android:color="@color/btn_background" />
     </shape>
