--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -25,7 +25,7 @@
             android:scaleType="centerInside"
             
             
-            app:cb_color="@color/dark_green"
+            app:cb_color="@color/btn_background"
             android:src="@drawable/run_new" />
 
         <TextView
@@ -57,7 +57,7 @@
             android:layout_alignParentTop="true"
             android:scaleType="centerInside"
             android:src="@drawable/photo_book"
-            app:cb_color="@color/dark_green"
+            app:cb_color="@color/btn_background"
              />
 
         <TextView
