--- a/EclipseProg/Scouthis/res/layout/fragment_section_alarms_set_clock.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alarms_set_clock.xml
@@ -1,13 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/set_alarm_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/fragment_border_side"
     tools:context=".AlarmsSetClockFragment" >
 
     <TextView
-        android:id="@+id/dayNoWork"
+        android:id="@+id/dayWillWork"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
@@ -15,13 +17,7 @@
 		style="@style/FragmentTitle"
          />
 
-    <Button
-        android:id="@+id/btnAlarmSetOk"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Fatto" />
+
 
     <LinearLayout
         android:id="@+id/weekdayll"
@@ -29,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/dayNoWork"
+        android:layout_below="@+id/dayWillWork"
         android:orientation="horizontal" >
 
         <TextView
@@ -114,7 +110,7 @@
         android:layout_width="match_parent"
         
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btnAlarmSetOk"
+        android:layout_above="@+id/btnOkAndGoBACK"
         android:layout_below="@+id/weekdayll"
         android:layout_alignParentLeft="true"
         android:orientation="vertical" >
@@ -132,8 +128,9 @@
             android:id="@+id/birdsll"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_weight="0.20"
             android:orientation="vertical" >
 
             <RelativeLayout
@@ -163,41 +160,34 @@
                     android:layout_alignParentTop="true"
                     android:scaleType="centerInside"
                     android:src="@drawable/bird_passera" />
+
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/alarms_centerline_birds"
                 android:layout_width="match_parent"
-                android:layout_height="56dip"
-                android:layout_marginTop="10dip" >
-
-                <ImageView
-                    android:id="@+id/imgBossi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="56dip"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/bird_bossi" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-30dp"
+                android:layout_weight="1" >
 
                 <ImageView
                     android:id="@+id/imgGufo"
                     android:layout_width="wrap_content"
-                    android:layout_height="56dip"
+                    android:layout_height="56dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_weight="1"
                     android:scaleType="centerInside"
                     android:src="@drawable/bird_gufo" />
-
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/alarm_secondline_birds"
                 android:layout_width="wrap_content"
-                android:layout_height="91dp"
+                android:layout_height="85dp"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
-                android:layout_marginTop="5dp" >
+                android:layout_marginTop="30dp" >
 
                 <ImageView
                     android:id="@+id/imgPettirosso"
@@ -227,9 +217,39 @@
                     android:scaleType="centerInside"
                     android:src="@drawable/bird_merlo" />
             </RelativeLayout>
-
         </LinearLayout>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/btnOkAndGoBACK"
+        android:layout_width="wrap_content"
+        android:layout_height="50dip"
+        android:layout_alignParentBottom="true"
+       
+         >
+        
+	        <it.poli.android.scoutthisme.tools.CircleButton
+	        android:id="@+id/btnAlarmSetOk"
+	        android:layout_width="50dp"
+	        android:layout_height="50dp"
+	        android:layout_alignParentRight="true"
+	        
+	        android:scaleType="fitCenter"
+	        android:src="@drawable/alarm_thumb_up"
+	        app:cb_color="@color/btn_background" />
+
+	        <TextView
+	            android:id="@+id/alarm_txt_back_home"
+	            style="@style/FragmentTitle"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentLeft="true"
+	            android:layout_centerVertical="true"
+	            android:text="@string/torna_alarm_home" />
+        
+	    </RelativeLayout>
+
+    
 
 </RelativeLayout>
