--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
@@ -30,7 +30,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/alarm_txt_home"
             style="@style/FragmentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
