--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -61,7 +61,7 @@
              />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/alarm_txt_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
