--- a/EclipseProg/Scouthis/res/values/dimens.xml
+++ b/EclipseProg/Scouthis/res/values/dimens.xml
@@ -16,7 +16,7 @@
     <dimen name="small_text">12dp</dimen>
     
     <dimen name="fragment_title">20sp</dimen>
-    <dimen name="fragment_border_side">5dip</dimen>
-    <dimen name="fragment_border_top">5dip</dimen>
+    <dimen name="fragment_border_side">5dp</dimen>
+    <dimen name="fragment_border_top">5dp</dimen>
     
 </resources>
